modify Index.html, test CICD lan 2

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -22,8 +22,8 @@ on:
 
 env:
   AWS_REGION: ap-southeast-1
-  ECR_REGISTRY: 799227077423.dkr.ecr.ap-southeast-1.amazonaws.com
-  ECR_REPOSITORY: nodejs-random-color-0529
+  ECR_REGISTRY: 851725411875.dkr.ecr.ap-southeast-1.amazonaws.com
+  ECR_REPOSITORY: nodejs-random-color
 
 jobs:
   build-and-push:
@@ -51,7 +51,7 @@ jobs:
         
     - name: Tag and push image to ECR
       run: |
-        docker tag nodejs-random-color:${{ inputs.version }} ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
+        docker tag nodejs-random-color:latest ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
         docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
         
     - name: Output image URI
